--- a/shonen/naruto-shippuden.html
+++ b/shonen/naruto-shippuden.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Naruto Shippuden</title>
 </head>
+
 <body>
 
     <header>
@@ -25,5 +27,304 @@
 
     </nav>
 
+    <main class="principal">
+        <div class="principal__caja">
+            <h3>naruto shippuden</h3>
+        </div>
+    </main>
+
+    <section class="sagas arcos">
+
+        <article class="article">
+
+            <h3>arco mision del rescate al kazekage</h3>
+            <p>es el primer arco de naruto shippuden cuenta con 32 episodios que van del 1 al 32, el anime comienza con la llegada de naruto despues de 2 años de entrenamiento,
+            en este arco los akatsuki inician su plan que es la captura de los jinchuriki, uno de ellos es gaara siendo el primero en ser capturado.
+            </p>
+
+            <h3>arco mision de reconocimiento del puente cielo y tierra</h3>
+            <p>segundo arco de naruto shippuden cuenta con 21 episodios que van del 33 al 53, en este arco intoducen a yamato y sai siendo parte del equipo 7,
+            su mision capturar a orochimaru y saber de sasuke pero las cosas no salen como lo esperaban.
+            </p>
+
+            <h3>arco mision subyugacion de akatsuki</h3>
+            <p>tercer arco de naruto shippuden cuenta con 17 episodios que van del 72 al 88, su mision identificar a Hidan y Kakuzu para hacerle una emboscada,
+            pero todo salio mal y el resultado la muerte de asuma sensei, este arco se centra en la vengaza del Ino-Shika-Chō con ayuda de kakashi para derrotar 
+            a la pareja akatsuki.
+            </p>
+
+            <h3>arco mision persecucion de itachi</h3>
+            <p>cuarto arco de naruto shippuden cuenta con 14 episodios que van del 113 al 126, este arco se centra en buscar a itachi, el motivo sasuke, despues
+            de matar a orochimaru decide crear un grupo llamado hebi, esto prende las alarmas tanto para konoha y los akatsuki teniendo como objetivo detener a sasuke,
+            deidara y tobi se cruzan con el desatando la batalla.
+            </p>
+
+            <h3>arco la promesa del maestro y la venganza</h3>
+            <p>quinto arco de naruto shippuden cuenta con 7 episodios que van del 127 al 133, jiraiya tras localizar la base akatsuki decide ir para buscar informacion.
+            pero lo que no esperaba era sus antiguos estudiantes y shinobis conocidos luchando contra el. en si este arco refleja muchas verdades del mundo shinobi.
+            </p>
+
+            <h3>arco batalla predestinada entre hermanos</h3>
+            <p>sexto arco de naruto shippuden cuenta con 10 episodios que van del 134 al 143, este arco se centra en la verdad oculta del clan uchiha, sasuke logra dar con itachi
+            iniciando su lucha por venganza al clan, el resultado no fue lo esperado, despues de acabarse el duelo sasuke escucha la verdad de la masacre y decide renombrar su grupo a taka,
+            su proposito destruir el sistema shinobi por ello se une con los akatsuki.
+            </p>
+
+            <h3>arco asalto de pain</h3>
+            <p>septimo arco de naruto shippuden cuenta con 24 episodios que van del 152 al 175 y es necesario omitir los episodios 170 y 171. este arco se centra
+            en el ataque de pain en konoha, la batalla fue intensa su resultado la destruccion de konoha. naruto con el modo sabio es el unico capaz de detener a nagato
+            y salvar a konoha.
+            </p>
+
+            <h3>arco reunion de los cinco kages</h3>
+            <p>octavo arco de naruto shippuden cuenta 18 episodios que van del 197 al 214, este arco se centra en la reunion de las 5 principales aldea sobre la amenaza akatsuki,
+            en plena reunion son atacados y obito declara la cuarta guerra shinobi, despues de terminarse sasuke rastrea a danzo para vengar su clan.
+            </p>
+
+            <h3>arco cuarta guerra mundial shinobi: conteo regresivo</h3>
+            <p>noveno arco de naruto shippuden. se divide en 2 secciones: <br><br>
+            primera seccion: cuenta con 8 episodios que van del 215 al 222. <br>
+            segunda seccion: cuenta con 14 episodios que van del 243 al 256. <br>
+            </p>
+
+            <h3>arco cuarta guerra mundial shinobi: confrontacion</h3>
+            <p>decimo arco de naruto shippuden se divide en 2 secciones: <br><br>
+            primera seccion: cuenta con 29 episodios que van del 261 al 289 y es necesario omitir los episodios 271, 279, 280, 281. y del 284 al 289. <br><br>
+            segunda seccion: cuenta con 25 episodios que van del 296 al 320 y es necesario omitir los episodios del 303 al 320. <br>
+            </p>
+
+            <h3>arco cuarta guerra mundial shinobi: climax</h3>
+            <p>decimo primer arco de naruto shippuden se divide en 2 secciones: <br><br>
+            primera seccion: cuenta con 28 episodios que van del 321 al 348. <br>
+            segunda seccion: cuenta con 14 episodios que van del 362 al 375. <br>
+            </p>
+
+            <h3>arco nacimiento del jinchuriki del diez colas</h3>
+            <p>decimo segundo arco de naruto shippuden se divide en 2 secciones: <br> <br>
+            primera seccion: cuenta con 16 episodios que van del 378 al 393 y es necesario omitir los episodios 389 y 390. <br>
+            segunda seccion: cuenta con 13 episodios que van del 414 al 426 y es necesario omitir los episodios 416, 422 y 423.<br>
+            </p>
+
+            <h3>arco itachi shinden</h3>
+            <p>decimo tercer arco de naruto shippuden cuenta con 7 episodios que van del 451 al 457, relata la historia de itachi uchiha, mostrando
+            detalles no vistos en el anime, en si es interesante ver este arco.
+            </p>
+
+            <h3>arco kaguya otsutsuki ataca</h3>
+            <p>decimo cuarto arco de naruto shippuden cuenta con 22 episodios que van del 458 al 479, la guerra da un giro inesperado con la aparicion de kaguya,
+            el mundo shinobi se enfrenta a una amenaza dificil el equipo 7 es el unico que puede hacerle frente a la situacion.
+            </p>
+
+            <h3>arco sasuke shinden</h3>
+            <p>decimo quinto arco de naruto shippuden cuenta con 5 episodios que van del 484 al 488, despues de terminarse la guerra sasuke es retenido por sus crimenes
+            pero naruto interviene para su liberacion. este arco se centra en los hombres bombas que atacan a konoha y como sasuke ayuda a controlar el problema.
+            </p>
+
+            <h3>arco shikamaru hiden</h3>
+            <p>decimo sexto arco de naruto shippuden cuenta con 5 episodios que van del 489 al 493, se centra en lo que sucedera con la era shinobi
+            tras el acuerdo de paz de los principales paises. un grupo controla shinobis que son marginados y shikamaru es enviado a investigar.
+            </p>
+
+            <h3>arco konoha hiden</h3>
+            <p>decimo septimo arco y ultimo de naruto shippuden cuenta con 7 episodios que van del 494 al 500. se centra en la boda de naruto e hinata, como tal
+            es la ultima historia del anime y su final es bueno.
+            </p>
+
+
+        </article>
+
+    </section>
+
+    <section class="terminos">
+
+        <article class="article">
+
+            <h3>Terminos claves</h3>
+            <p>
+            </p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p id="h"></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+            <h3>Saga Del East Blue</h3>
+            <p></p>
+            <h4>arco romance down</h4>
+            <p></p>
+
+        </article>
+
+    </section>
+
+    <div class="grid">
+
+        <h2>personajes claves</h2>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+                <li>hola</li>
+            </ul>
+
+        </div>
+
+        <div class="grid__items">
+
+            <ul>
+                <li>hola</li>
+                <li>hols</li>
+                <li>oooo</li>
+                <li>nami</li>
+            </ul>
+
+        </div>
+
+    </div>
+
+    <section class="relleno">
+
+        <article class="article">
+
+            <h3>relleno</h3>
+            <p>en esta seccion se muestra el relleno de naruto shippuden, en si no tiene malos relleno y hay uno que otro que vale la pena ver, el relleno
+            tiene episodios que siguen una secuencia con el canon pero solo son pocos. en si seran señalados.
+            </p>
+
+            <h4>arco doce guardianes ninja</h4>
+            <p>cuenta con 18 episodios que van del 54 al 71 y es necesario ver los episodios 54, 55, 56 y 71. este relleno en si es bueno verlo porque 
+            explican la naturaleza del chakra de naruto y se muestra una relacion con asuma sensei.
+            </p>
+
+            <h4>arco aparicion del tres colas</h4>
+            <p>cuenta con 24 episodios que van del 89 al 112 y es necesario ver el episodio 89 y 112. en si no es necesario ver este relleno completo.</p>
+
+            <h4>arco liberacion del seis colas</h4>
+            <p>cuenta con 8 episodios que van del 144 al 151, este relleno si vale la pena ver es corto e interesante.</p>
+
+            <h4>arco del pasado: el lugar de konoha</h4>
+            <p>cuenta con 21 episodios que van del 176 al 196, en si no es necesario ver este relleno.</p>
+
+            <h4>arco vida paradisiaca en un barco</h4>
+            <p>cuenta con 20 episodios que van del 223 al 242, en si no es necesario de ver este relleno.</p>
+
+            <h4>arco los dos predestinados</h4>
+            <p>cuenta con 4 episodios que van del 257 al 260, en si no es necesario ver este relleno.</p>
+
+            <h4>arco chikara</h4>
+            <p>cuenta con 6 episodios que van del 290 al 295, en si no es necesario ver este relleno.</p>
+
+            <h4>arco kakashi: la sombra de las operaciones anbu</h4>
+            <p>cuenta con 13 episodios que van del 349 al 361, este relleno es interesante de ver.</p>
+
+            <h4>arco mecha naruto</h4>
+            <p>cuenta con 2 episodios que van del 376 al 377, en si no es necesario ver este relleno.</p>
+
+            <h4>arco el respaldo de naruto la maravilla de los amigos</h4>
+            <p>cuenta con 20 episodios que van del 394 al 413, en si este relleno muestra los examenes chunin de los demas equipos cuando naruto estaba 
+            entrenando, es recpmendable ver.
+            </p>
+
+            <h4>arco el manual shinobi de jiraiya</h4>
+            <p>cuenta con 24 episodios que van del 427 al 450, en si es necesario omitir este relleno.</p>
+
+            <h4>arco infancia</h4>
+            <p>cuenta con 4 episodios que van del 480 al 483, en si es necesario omitir este relleno.</p>
+
+
+        </article>
+
+    </section>
+
+    <div class="peliculas">
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+        <div class="peliculas__ova">
+            <h4>la</h4>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
