modificando un poco el index y el header para que el texto esté centrado, lo hice con flex-box

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 
-    <header>
+    <header class="header">
 
-        <h1>Inicio</h1>
+        <h1 class="title--header">Inicio</h1>
 
     </header>
 
